--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "simqel/simqel",
+    "name": "kwiatek5/testy",
     "type": "library",
     "description": "Test",
     "license": "",
